src/main/java/com/camile/checker/FlinkSqlCheckerParser.java
// This is a generated file. Not intended for manual editing.
package com.camile.checker;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.camile.checker.FlinkSqlCheckerTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FlinkSqlCheckerParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return FlinkSqlFile(b, l + 1);
  }

  /* ********************************************************** */
  // allStatement*
  static boolean FlinkSqlFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FlinkSqlFile")) return false;
    while (true) {
      int c = current_position_(b);
      if (!allStatement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FlinkSqlFile", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'ADD' 'JAR' SINGLE_QUOTATION pathToFileName PERIOD 'jar' SINGLE_QUOTATION SEMI_COLON
  public static boolean addJar(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addJar")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD_JAR, "<add jar>");
    r = consumeToken(b, "ADD");
    r = r && consumeToken(b, "JAR");
    r = r && consumeToken(b, SINGLE_QUOTATION);
    r = r && pathToFileName(b, l + 1);
    r = r && consumeToken(b, PERIOD);
    r = r && consumeToken(b, "jar");
    r = r && consumeTokens(b, 0, SINGLE_QUOTATION, SEMI_COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // identifier PERIOD '*'
  public static boolean allInGroup(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allInGroup")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALL_IN_GROUP, "<all in group>");
    r = identifier(b, l + 1);
    r = r && consumeTokens(b, 0, PERIOD, ANY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // selectStatement | queryStatement | createStatement | jarCommand | insertStatement | note
  public static boolean allStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALL_STATEMENT, "<all statement>");
    r = selectStatement(b, l + 1);
    if (!r) r = queryStatement(b, l + 1);
    if (!r) r = createStatement(b, l + 1);
    if (!r) r = jarCommand(b, l + 1);
    if (!r) r = insertStatement(b, l + 1);
    if (!r) r = note(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // baseString | CHINESE_STRING
  public static boolean allString(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allString")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALL_STRING, "<all string>");
    r = baseString(b, l + 1);
    if (!r) r = consumeToken(b, CHINESE_STRING);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ('ROW_NUMBER' | 'RANK' | 'DENSE_RANK' ) LEFT_BRACKET RIGHT_BRACKET
  public static boolean analyticAggregateFunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "analyticAggregateFunction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANALYTIC_AGGREGATE_FUNCTION, "<analytic aggregate function>");
    r = analyticAggregateFunction_0(b, l + 1);
    r = r && consumeTokens(b, 0, LEFT_BRACKET, RIGHT_BRACKET);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'ROW_NUMBER' | 'RANK' | 'DENSE_RANK'
  private static boolean analyticAggregateFunction_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "analyticAggregateFunction_0")) return false;
    boolean r;
    r = consumeToken(b, "ROW_NUMBER");
    if (!r) r = consumeToken(b, "RANK");
    if (!r) r = consumeToken(b, "DENSE_RANK");
    return r;
  }

  /* ********************************************************** */
  // identifier eq (  ( callStatement [ ( 'WITH' | 'WITHOUT' ) 'RETURN' ])  | assignmentStatementOperand)
  public static boolean assignmentStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STATEMENT, "<assignment statement>");
    r = identifier(b, l + 1);
    r = r && eq(b, l + 1);
    r = r && assignmentStatement_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( callStatement [ ( 'WITH' | 'WITHOUT' ) 'RETURN' ])  | assignmentStatementOperand
  private static boolean assignmentStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatement_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignmentStatement_2_0(b, l + 1);
    if (!r) r = assignmentStatementOperand(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // callStatement [ ( 'WITH' | 'WITHOUT' ) 'RETURN' ]
  private static boolean assignmentStatement_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatement_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = callStatement(b, l + 1);
    r = r && assignmentStatement_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ ( 'WITH' | 'WITHOUT' ) 'RETURN' ]
  private static boolean assignmentStatement_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatement_2_0_1")) return false;
    assignmentStatement_2_0_1_0(b, l + 1);
    return true;
  }

  // ( 'WITH' | 'WITHOUT' ) 'RETURN'
  private static boolean assignmentStatement_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatement_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignmentStatement_2_0_1_0_0(b, l + 1);
    r = r && consumeToken(b, "RETURN");
    exit_section_(b, m, null, r);
    return r;
  }

  // 'WITH' | 'WITHOUT'
  private static boolean assignmentStatement_2_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatement_2_0_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, "WITH");
    if (!r) r = consumeToken(b, "WITHOUT");
    return r;
  }

  /* ********************************************************** */
  // insertStatement   | queryExpression | sqlException | expression
  public static boolean assignmentStatementOperand(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentStatementOperand")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STATEMENT_OPERAND, "<assignment statement operand>");
    r = insertStatement(b, l + 1);
    if (!r) r = queryExpression(b, l + 1);
    if (!r) r = sqlException(b, l + 1);
    if (!r) r = expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (keyWords ( HYPHEN | UNDERSCORE ) (ENGLISH_STRING | NUMBER | DOUBLE | HYPHEN| UNDERSCORE|COLON) ) | !keyWords (ENGLISH_STRING | CHINESE_STRING | NUMBER | DOUBLE | HYPHEN| UNDERSCORE|COLON)
  public static boolean baseString(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "baseString")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_STRING, "<base string>");
    r = baseString_0(b, l + 1);
    if (!r) r = baseString_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // keyWords ( HYPHEN | UNDERSCORE ) (ENGLISH_STRING | NUMBER | DOUBLE | HYPHEN| UNDERSCORE|COLON)
  private static boolean baseString_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "baseString_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = keyWords(b, l + 1);
    r = r && baseString_0_1(b, l + 1);
    r = r && baseString_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // HYPHEN | UNDERSCORE
  private static boolean baseString_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "baseString_0_1")) return false;
    boolean r;
    r = consumeToken(b, HYPHEN);
    if (!r) r = consumeToken(b, UNDERSCORE);
    return r;
  }

  // ENGLISH_STRING | NUMBER | DOUBLE | HYPHEN| UNDERSCORE|COLON
  private static boolean baseString_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "baseString_0_2")) return false;
    boolean r;
    r = consumeToken(b, ENGLISH_STRING);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, DOUBLE);
    if (!r) r = consumeToken(b, HYPHEN);
    if (!r) r = consumeToken(b, UNDERSCORE);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  // !keyWords (ENGLISH_STRING | CHINESE_STRING | NUMBER | DOUBLE | HYPHEN| UNDERSCORE|COLON)
  private static boolean baseString_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "baseString_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = baseString_1_0(b, l + 1);
    r = r && baseString_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !keyWords
  private static boolean baseString_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "baseString_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !keyWords(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ENGLISH_STRING | CHINESE_STRING | NUMBER | DOUBLE | HYPHEN| UNDERSCORE|COLON
  private static boolean baseString_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "baseString_1_1")) return false;
    boolean r;
    r = consumeToken(b, ENGLISH_STRING);
    if (!r) r = consumeToken(b, CHINESE_STRING);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, DOUBLE);
    if (!r) r = consumeToken(b, HYPHEN);
    if (!r) r = consumeToken(b, UNDERSCORE);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  /* ********************************************************** */
  // [stringNot] commonValueExpression 'AND' commonValueExpression
  public static boolean betweenPredicate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "betweenPredicate")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BETWEEN_PREDICATE, "<between predicate>");
    r = betweenPredicate_0(b, l + 1);
    r = r && commonValueExpression(b, l + 1);
    r = r && consumeToken(b, "AND");
    r = r && commonValueExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [stringNot]
  private static boolean betweenPredicate_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "betweenPredicate_0")) return false;
    stringNot(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // booleanValueExpression
  public static boolean booleanExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_EXPRESSION, "<boolean expression>");
    r = booleanValueExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // [stringNot]  booleanPrimary
  public static boolean booleanFactor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanFactor")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_FACTOR, "<boolean factor>");
    r = booleanFactor_0(b, l + 1);
    r = r && booleanPrimary(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [stringNot]
  private static boolean booleanFactor_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanFactor_0")) return false;
    stringNot(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // existsPredicate
  //                     | (commonValueExpression [betweenPredicate|matchPredicate|likeRegexPredicate|inPredicate|isNullPredicate|quantifiedComparisonPredicate|comparisonPredicate])
  public static boolean booleanPrimary(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanPrimary")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_PRIMARY, "<boolean primary>");
    r = existsPredicate(b, l + 1);
    if (!r) r = booleanPrimary_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
